scripts/nullaway/annotator/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../annotator/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Cola.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return datoAuxiliar;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
